[package]
name = "qik"
description = "Rust library for the Pololu qik dual serial motor controllers"
version = "1.2.3"
authors = ["Andy Grove <andygrove73@gmail.com>"]
homepage = "https://github.com/andygrove/rust-qik"
documentation = "https://github.com/andygrove/rust-qik"
repository = "https://github.com/andygrove/rust-qik"
license = "MIT/Apache-2.0"

[dependencies]
serial = "0.3.4"
sysfs_gpio = "0.4.3"
